# fingenius-ai

./: .gitignore  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/scripts/: apply_migrations.sh  train_models.py
backend/src/: main.py
backend/src/api/v1/: __init__.py  accounts.py  auth.py  budgets.py  goals.py  investments.py  savings.py  transactions.py  users.py
backend/src/core/: config.py  dependencies.py  exceptions.py  security.py
backend/src/db/: session.py
backend/src/db/models/: account.py  budget.py  goal.py  investment.py  saving.py  transaction.py  user.py
backend/src/ml_engine/: behavior_analyzer.py  budget_optimizer.py  forecasting.py  investment_advisor.py  savings_strategist.py  transaction_categorizer.py
backend/src/models/: ai_response.py  auth.py  financial.py  user.py
backend/src/services/: account_service.py  automation_service.py  data_ingestion_service.py  notification_service.py  plaid_webhook_handler.py  user_service.py
backend/src/tasks/: account_sync.py  ml_training.py  notification_tasks.py
backend/tests/api/: test_auth.py  test_users.py
backend/tests/db/: test_models.py
backend/tests/services/: test_user_service.py
frontend/public/: index.html
frontend/src/assets/: placeholder.txt
frontend/src/components/auth/: LoginForm.js  RegisterForm.js
frontend/src/components/common/: Button.js
frontend/src/components/financial/: ChartComponent.js
frontend/src/components/layout/: Layout
